--- a/app-service/Dockerfile
+++ b/app-service/Dockerfile
@@ -24,5 +24,5 @@ FROM debian:buster-slim AS runtime
 WORKDIR /app
 COPY --from=builder /app/target/release/app-service /usr/local/bin
 # Fix the assets path - it should be relative to the workspace root
-COPY --from=builder /app/assets /app/assets
+COPY --from=builder /app/app-service/assets /app/assets
 ENTRYPOINT ["/usr/local/bin/app-service"]
