--- a/compose.yml
+++ b/compose.yml
@@ -3,11 +3,21 @@ services:
     image: nginx:alpine
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./certbot/conf:/etc/letsencrypt  # SSL certificates from certbot
+      - ./certbot/www:/var/www/certbot   # Let's Encrypt challenge files
     depends_on:
       - app-service
       - auth-service
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
   app-service:
     build:
