--- a/nginx.conf
+++ b/nginx.conf
@@ -11,8 +11,34 @@ http {
         server auth-service:3000;
     }
 
+    # HTTP server - handles Let's Encrypt challenges and redirects to HTTPS
     server {
         listen 80;
+        server_name idlelrg.duckdns.org;
+        
+        # Let's Encrypt challenge location
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+        
+        # Redirect all other HTTP traffic to HTTPS
+        location / {
+            return 301 https://$server_name$request_uri;
+        }
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl http2;
+        server_name idlelrg.duckdns.org;
+        
+        # SSL certificate paths
+        ssl_certificate /etc/letsencrypt/live/idlelrg.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/idlelrg.duckdns.org/privkey.pem;
+        
+        # Basic SSL settings
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers off;
         
         # App service routes
         location /app/ {
@@ -20,7 +46,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto https;
         }
         
         # Auth service routes  
@@ -29,7 +55,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto https;
         }
         
         # Default redirect to app
