fix type in nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ http {
     # HTTP server - handles Let's Encrypt challenges and redirects to HTTPS
     server {
         listen 80;
-        server_name idlelrg.duckdns.org;
+        server_name idlelgr.duckdns.org;
         
         # Let's Encrypt challenge location
         location /.well-known/acme-challenge/ {
@@ -30,11 +30,11 @@ http {
     # HTTPS server
     server {
         listen 443 ssl http2;
-        server_name idlelrg.duckdns.org;
+        server_name idlelgr.duckdns.org;
         
         # SSL certificate paths
-        ssl_certificate /etc/letsencrypt/live/idlelrg.duckdns.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/idlelrg.duckdns.org/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/idlelgr.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/idlelgr.duckdns.org/privkey.pem;
         
         # Basic SSL settings
         ssl_protocols TLSv1.2 TLSv1.3;
