--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -2,19 +2,31 @@ name: Build, Test and Deploy to Prod
 
 # Trigger the workflow when changes are pushed to the main branch
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Reason for deployment'
+        required: false
+        default: 'Manual deployment'
 
 jobs:
+  confirm:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Confirm deployment
+      run: |
+        echo "Deploying to production..."
+        echo "Reason: ${{ github.event.inputs.reason }}"
+        echo "Triggered by: ${{ github.actor }}"
+
   build:
+    needs: confirm
     runs-on: ubuntu-latest
 
     steps:
       # Checkout code from the repository
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
       # Cache dependencies to speed up build times
     - name: Cache dependencies
@@ -48,7 +60,7 @@ jobs:
       uses: docker/setup-buildx-action@v2
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
