--- a/nginx.conf
+++ b/nginx.conf
@@ -40,7 +40,18 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers off;
         
-        # App service routes
+        # App service routes (including assets)
+        location /app/assets/ {
+            proxy_pass http://app-service/assets/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+            # Optional: cache static assets
+            expires 1d;
+            add_header Cache-Control "public, immutable";
+        }
+        
         location /app/ {
             proxy_pass http://app-service/;
             proxy_set_header Host $host;
@@ -49,7 +60,18 @@ http {
             proxy_set_header X-Forwarded-Proto https;
         }
         
-        # Auth service routes  
+        # Auth service routes (including assets)
+        location /auth/assets/ {
+            proxy_pass http://auth-service/assets/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+            # Optional: cache static assets
+            expires 1d;
+            add_header Cache-Control "public, immutable";
+        }
+        
         location /auth/ {
             proxy_pass http://auth-service/;
             proxy_set_header Host $host;
