--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde_json = "1.0"
 askama = "0.12.1"
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
 reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
+async-trait = "0.1.78"
