add crate fake to provide more robust testing

--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -16,3 +16,5 @@ async-trait = { workspace = true }
 
 [dev-dependencies]
 reqwest = { workspace = true }
+fake = { workspace = true }
+rand = { workspace = true }
