--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
 async-trait = "0.1.78"
 fake = "2.3.0"
 rand = "0.8.5"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
