--- a/nginx.conf
+++ b/nginx.conf
@@ -42,7 +42,7 @@ http {
         
         # App service routes (including assets)
         location /app/assets/ {
-            proxy_pass http://app-service/assets/;
+            proxy_pass http://app-service;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
