another attempt at nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,10 @@ events {
 }
 
 http {
+    # Add MIME type configuration
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
     upstream app-service {
         server app-service:8000;
     }
@@ -42,7 +46,7 @@ http {
         
         # App service routes (including assets)
         location /app/assets/ {
-            proxy_pass http://app-service;
+            proxy_pass http://app-service/assets/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
