--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,34 @@
+# Rust
 /target
+*/target/
+**/*.rs.bk
+*.pdb
+
+# Environment and secrets
 .env
+*/.env
+*.key
+*.pem
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Coverage reports
+tarpaulin-report.html
+cobertura.xml
+lcov.info
+
+# Personal/local files
+copilot-instructions.md
+TODO.md
+NOTES.md
