--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -13,6 +13,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 uuid = { workspace = true }
 async-trait = { workspace = true }
+validator = { workspace = true }
 
 [dev-dependencies]
 reqwest = { workspace = true }
