--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 askama = "0.12.1"
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
-reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
+reqwest = { version = "0.11.26", default-features = false, features = [
+    "json",
+    "cookies",
+] }
 async-trait = "0.1.78"
 fake = "2.3.0"
 rand = "0.8.5"
