--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = { workspace = true }
+axum-extra = { workspace = true }
 tokio = { workspace = true }
 tower-http = { workspace = true }
 serde = { workspace = true }
