--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -15,6 +15,8 @@ serde_json = { workspace = true }
 uuid = { workspace = true }
 async-trait = { workspace = true }
 validator = { workspace = true }
+jsonwebtoken = { workspace = true }
+chrono = { workspace = true }
 
 [dev-dependencies]
 reqwest = { workspace = true }
