add dotenvy and lazy_static to cargo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ quickcheck_macros = "0.9.1"
 validator = "0.16.1"
 jsonwebtoken = "9.2.0"
 chrono = "0.4.35"
+dotenvy = "0.15.7"
+lazy_static = "1.4.0"
