--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -17,6 +17,8 @@ async-trait = { workspace = true }
 validator = { workspace = true }
 jsonwebtoken = { workspace = true }
 chrono = { workspace = true }
+dotenvy = { workspace = true }
+lazy_static = { workspace = true }
 
 [dev-dependencies]
 reqwest = { workspace = true }
