--- a/compose-local.yml
+++ b/compose-local.yml
@@ -2,12 +2,9 @@ services:
   nginx:
     image: nginx:alpine
     ports:
-      - "80:80"
-      - "443:443"
+      - "8080:80"  # Different port to avoid conflicts
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./certbot/conf:/etc/letsencrypt  # SSL certificates from certbot
-      - ./certbot/www:/var/www/certbot   # Let's Encrypt challenge files
+      - ./nginx-local.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - app-service
       - auth-service
