now that app service is needed, finalized nginx configs as required

--- a/nginx-local.conf
+++ b/nginx-local.conf
@@ -17,27 +17,54 @@ http {
     server {
         listen 80;
         server_name localhost;
-        
-        location /app/assets/ {
+
+        # Assets from app-service
+        location /assets/ {
             proxy_pass http://app-service/assets/;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
-        
-        location /app/ {
-            proxy_pass http://app-service/;
+
+        # Protected endpoint - needs cookies passed through
+        location /protected {
+            proxy_pass http://app-service/protected;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass_header Set-Cookie;
+            proxy_pass_header Cookie;
         }
-        
-        location /auth/assets/ {
-            proxy_pass http://auth-service/assets/;
+
+        # Auth service routes
+        location ~ ^/(login|logout|signup)$ {
+            proxy_pass http://auth-service$request_uri;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass_header Set-Cookie;
+            proxy_pass_header Cookie;
         }
-        
+
         location /auth/ {
             proxy_pass http://auth-service/;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass_header Set-Cookie;
+            proxy_pass_header Cookie;
         }
-        
+
+        # App service routes
+        location /app/ {
+            proxy_pass http://app-service/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass_header Set-Cookie;
+            proxy_pass_header Cookie;
+        }
+
         location / {
             return 301 /app/;
         }
