--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,6 @@ events {
 }
 
 http {
-    # Add MIME type configuration
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
@@ -20,12 +19,10 @@ http {
         listen 80;
         server_name idlelgr.duckdns.org;
         
-        # Let's Encrypt challenge location
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
         
-        # Redirect all other HTTP traffic to HTTPS
         location / {
             return 301 https://$server_name$request_uri;
         }
@@ -36,55 +33,64 @@ http {
         listen 443 ssl http2;
         server_name idlelgr.duckdns.org;
         
-        # SSL certificate paths
         ssl_certificate /etc/letsencrypt/live/idlelgr.duckdns.org/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/idlelgr.duckdns.org/privkey.pem;
-        
-        # Basic SSL settings
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers off;
         
-        # App service routes (including assets)
-        location /app/assets/ {
+        # Assets from app-service
+        location /assets/ {
             proxy_pass http://app-service/assets/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
-            # Optional: cache static assets
             expires 1d;
             add_header Cache-Control "public, immutable";
         }
-        
-        location /app/ {
-            proxy_pass http://app-service/;
+
+        # Protected endpoint - needs cookies passed through
+        location /protected {
+            proxy_pass http://app-service/protected;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
+            proxy_pass_header Set-Cookie;
+            proxy_pass_header Cookie;
         }
-        
-        # Auth service routes (including assets)
-        location /auth/assets/ {
-            proxy_pass http://auth-service/assets/;
+
+        # Auth service routes
+        location ~ ^/(login|logout|signup)$ {
+            proxy_pass http://auth-service$request_uri;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
-            # Optional: cache static assets
-            expires 1d;
-            add_header Cache-Control "public, immutable";
+            proxy_pass_header Set-Cookie;
+            proxy_pass_header Cookie;
         }
-        
+
         location /auth/ {
             proxy_pass http://auth-service/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
+            proxy_pass_header Set-Cookie;
+            proxy_pass_header Cookie;
         }
-        
-        # Default redirect to app
+
+        location /app/ {
+            proxy_pass http://app-service/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+            proxy_pass_header Set-Cookie;
+            proxy_pass_header Cookie;
+        }
+
         location / {
             return 301 /app/;
         }
