--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["app-service", "auth-service"]
 resolver = "2"
 
 [workspace.dependencies]
-axum = { version = "0.7.4", features = ["macros"] }
+axum = "0.7.4"
 axum-extra = { version = "0.9.2", features = ["cookie"] }
 tokio = { version = "1.36", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["fs", "cors"] }
