--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -19,6 +19,7 @@ jsonwebtoken = { workspace = true }
 chrono = { workspace = true }
 dotenvy = { workspace = true }
 lazy_static = { workspace = true }
+rand = { workspace = true }
 
 [dev-dependencies]
 reqwest = { workspace = true }
