update 2fa handler to properly serialize request and update nginx config for 2fa route

--- a/nginx.conf
+++ b/nginx.conf
@@ -91,6 +91,16 @@ http {
             proxy_pass_header Cookie;
         }
 
+        location /verify-2fa {
+        proxy_pass http://auth-service/verify-2fa;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_pass_header Set-Cookie;
+        proxy_pass_header Cookie;
+        }
+
         location / {
             return 301 /app/;
         }
