--- a/nginx-local.conf
+++ b/nginx-local.conf
@@ -65,6 +65,16 @@ http {
             proxy_pass_header Cookie;
         }
 
+        # 2FA verification route - must proxy to auth-service
+        location /verify-2fa {
+            proxy_pass http://auth-service/verify-2fa;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass_header Set-Cookie;
+            proxy_pass_header Cookie;
+        }
+
         location / {
             return 301 /app/;
         }
