--- a/compose-local.yml
+++ b/compose-local.yml
@@ -8,13 +8,7 @@ services:
     depends_on:
       - app-service
       - auth-service
-
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    restart: "always"
 
   app-service:
     build:
