--- a/compose.yml
+++ b/compose.yml
@@ -11,6 +11,7 @@ services:
     depends_on:
       - app-service
       - auth-service
+    restart: "always"
 
   certbot:
     image: certbot/certbot
@@ -18,6 +19,7 @@ services:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    restart: "always"
 
   app-service:
     build:
