--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -20,6 +20,7 @@ chrono = { workspace = true }
 dotenvy = { workspace = true }
 lazy_static = { workspace = true }
 rand = { workspace = true }
+sqlx = { workspace = true }
 
 [dev-dependencies]
 reqwest = { workspace = true }
