refactor data_stores submod, add argon2 dependency

--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -21,6 +21,7 @@ dotenvy = { workspace = true }
 lazy_static = { workspace = true }
 rand = { workspace = true }
 sqlx = { workspace = true }
+argon2 = { workspace = true }
 
 [dev-dependencies]
 reqwest = { workspace = true }
