--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ tarpaulin-report.html
 cobertura.xml
 lcov.info
 
+# sqlx macro stuff
+.sqlx/
+
 # Personal/local files
 copilot-instructions.md
 TODO.md
