--- a/compose-local.yml
+++ b/compose-local.yml
@@ -44,6 +44,12 @@ services:
       - "5432:5432"
     volumes:
       - db:/var/lib/postgresql/data
+  
+  redis:
+    image: redis:alpine
+    restart: always
+    ports:
+      - "6379:6379"
 
 volumes:
   db:
