--- a/compose-local.yml
+++ b/compose-local.yml
@@ -34,6 +34,7 @@ services:
       DATABASE_URL: "postgres://postgres:${POSTGRES_PASSWORD}@db:5432"
     depends_on:
       - db
+      - redis
 
   db:
     image: postgres:alpine
