--- a/compose.yml
+++ b/compose.yml
@@ -45,6 +45,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     depends_on:
       - db
+      - redis
   
   db:
     image: postgres:alpine
