make sure SQLx doesn't throw compile time errors

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -9,6 +9,9 @@ on:
         required: false
         default: 'Manual deployment'
 
+env:
+  SQLX_OFFLINE: true
+
 jobs:
   confirm:
     runs-on: ubuntu-latest
