--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -26,6 +26,25 @@ jobs:
     needs: confirm
     runs-on: ubuntu-latest
 
+    # New! Our tests now require a running PostgreSQL and Redis instance!
+    # Service containers to run with the `test` container job
+    services:
+      postgres:
+        # Docker Hub image
+        image: postgres:alpine
+        # Environment variables scoped only for the `postgres` element
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: postgres
+        # Opens tcp port 5432 on the host and service container
+        ports:
+          - 5432:5432
+      redis:
+        image: redis:alpine
+        ports:
+          - 6379:6379
+
     steps:
       # Checkout code from the repository
     - name: Checkout code
