--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -36,6 +36,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
           POSTGRES_DB: postgres
         # Opens tcp port 5432 on the host and service container
         ports:
