--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ resolver = "2"
 axum = { version = "0.7.9", features = ["macros"] }
 axum-extra = { version = "0.9.6", features = ["cookie"] }
 tokio = { version = "1.46.1", features = ["full"] }
-tower-http = { version = "0.5.2", features = ["fs", "cors"] }
+tower-http = { version = "0.5.2", features = ["fs", "cors", "trace"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.141"
 askama = "0.12.1"
@@ -32,3 +32,5 @@ sqlx = { version = "0.8", features = [
 ] }
 argon2 = { version = "0.5.3", features = ["std"] }
 redis = { version = "0.25.2", features = ["tokio-comp"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
