--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -23,6 +23,8 @@ rand = { workspace = true }
 sqlx = { workspace = true }
 argon2 = { workspace = true }
 redis = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [dev-dependencies]
 reqwest = { workspace = true }
