--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -25,6 +25,8 @@ argon2 = { workspace = true }
 redis = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+thiserror = { workspace = true }
+color-eyre = { workspace = true }
 
 [dev-dependencies]
 reqwest = { workspace = true }
