--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -25,6 +25,7 @@ argon2 = { workspace = true }
 redis = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+tracing-error = { workspace = true }
 thiserror = { workspace = true }
 color-eyre = { workspace = true }
 
