--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -28,6 +28,7 @@ tracing-subscriber = { workspace = true }
 tracing-error = { workspace = true }
 thiserror = { workspace = true }
 color-eyre = { workspace = true }
+secrecy = { workspace = true }
 
 [dev-dependencies]
 reqwest = { workspace = true }
