--- a/compose.yml
+++ b/compose.yml
@@ -43,6 +43,7 @@ services:
       JWT_SECRET: ${JWT_SECRET}
       DATABASE_URL: "postgres://postgres:${POSTGRES_PASSWORD}@db:5432"
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTMARK_AUTH_TOKEN: ${POSTMARK_AUTH_TOKEN} 
     depends_on:
       - db
       - redis
