setup real email client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.141"
 askama = "0.12.1"
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
-reqwest = { version = "0.11.27", default-features = false, features = [
+reqwest = { version = "0.11.26", default-features = false, features = [
     "json",
+    "rustls-tls",
     "cookies",
 ] }
 async-trait = "0.1.78"
@@ -41,3 +42,4 @@ tracing-error = "0.2.0"
 thiserror = "1.0.58"
 color-eyre = "0.6.3"
 secrecy = { version = "0.8.0", features = ["serde"] }
+wiremock = "0.6.0"
